Fixed horizontal overflow in navbar on mobile

--- a/components/header.module.css
+++ b/components/header.module.css
@@ -30,6 +30,7 @@
 
     margin-top: 5rem;
     display: flex;
+    flex-wrap: wrap;
     gap: 2rem;
     align-items: center;
 
